--- a/Imp/StoreManagement/CommonUI/InventoryVoucherItem.Strings.resx
+++ b/Imp/StoreManagement/CommonUI/InventoryVoucherItem.Strings.resx
@@ -120,4 +120,7 @@
   <data name="InventoryVoucherItem" xml:space="preserve">
     <value>قلم سند انبار</value>
   </data>
+  <data name="Quantity" xml:space="preserve">
+    <value>مقدار</value>
+  </data>
 </root>
