--- a/Imp/StoreManagement/CommonUI/LogicalResources.Strings.resx
+++ b/Imp/StoreManagement/CommonUI/LogicalResources.Strings.resx
@@ -117,25 +117,31 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ConfirmVoucher" xml:space="preserve">
-    <value>تأیید</value>
-  </data>
-  <data name="InvalidateVoucher" xml:space="preserve">
-    <value>ابطال</value>
-  </data>
-  <data name="AddUnit" xml:space="preserve">
-    <value>تعریف واحد سنجش</value>
-  </data>
-  <data name="AddPart" xml:space="preserve">
-    <value>تعریف کالا</value>
-  </data>
-  <data name="AddStore" xml:space="preserve">
-    <value>تعریف انبار</value>
-  </data>
-  <data name="AddInventoryVoucher" xml:space="preserve">
-    <value>ثبت سند انبار</value>
-  </data>
   <data name="Training" xml:space="preserve">
-    <value>منوی تستی</value>
+    <value>تست</value>
+  </data>
+  <data name="StoreManagement" xml:space="preserve">
+    <value>مدیریت انبار</value>
+  </data>
+  <data name="Unit" xml:space="preserve">
+    <value>واحد سنجش</value>
+  </data>
+  <data name="Part" xml:space="preserve">
+    <value>کالا</value>
+  </data>
+  <data name="Store" xml:space="preserve">
+    <value>انبار</value>
+  </data>
+  <data name="New" xml:space="preserve">
+    <value>جدید</value>
+  </data>
+  <data name="Edit" xml:space="preserve">
+    <value>ویرایش</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>حذف</value>
+  </data>
+  <data name="InventoryVoucher" xml:space="preserve">
+    <value>سند انبار</value>
   </data>
 </root>
