--- a/Imp/StoreManagement/CommonUI/Part.Strings.resx
+++ b/Imp/StoreManagement/CommonUI/Part.Strings.resx
@@ -129,4 +129,7 @@
   <data name="UnitRef" xml:space="preserve">
     <value>واحد سنجش</value>
   </data>
+  <data name="InventoryQuantity" xml:space="preserve">
+    <value>موجودی کالا</value>
+  </data>
 </root>
