--- a/Imp/StoreManagement/CommonUI/Messages.Strings.resx
+++ b/Imp/StoreManagement/CommonUI/Messages.Strings.resx
@@ -144,10 +144,6 @@
   <data name="SelectStoreToAddItem" xml:space="preserve">
     <value>برای اضافه کردن قلم انبار لازم است ابتدا انبار را انتخاب کنید.</value>
   </data>
-  <data name="InventoryCannotBeNegative" xml:space="preserve">
-    <value>خطا در انجام عملیات: موجودی کالا نمیتواند کمتر از صفر شود.
-از کالای {0} در حال حاضر {1} {2} در این انبار موجود است.</value>
-  </data>
   <data name="CannotEditUnitWhenUsedInInventoryVoucherItem" xml:space="preserve">
     <value>این واحد سنجش در اقلام سند انبار استفاده شده است و نمیتوانید ان را ویرایش کنید.</value>
   </data>
@@ -156,5 +152,9 @@
   </data>
   <data name="CannotEditStoreWhenUsedInInventoryVoucher" xml:space="preserve">
     <value>برای این انبار سند ثبت شده است و نمیتوانید آن را ویرایش کنید.</value>
+  </data>
+  <data name="InventoryCannotBeNegative" xml:space="preserve">
+    <value>موجودی کالا نمیتواند منفی باشد.
+کالای {0} ، {1} {2} بیشتر از موجودی انتخاب شده است.</value>
   </data>
 </root>
